# fed-a11y-scan

./: .gitignore  Makefile  README.md  app.py  cdk.json  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml
.github/: CONTRIBUTING.md  STYLE-GUIDE.md
assets/: domains.csv
domains/: agency_org_cleaner.py  create_domains_csv.py  current-federal.csv  domains.csv  requirements.txt
lambdas/a11y_scan/: index.js  package-lock.json  package.json
lambdas/current_domain_gatherer/: handler.py
lambdas/current_domain_gatherer/utils/: get_domains.py
lambdas/domain_gatherer/: handler.py
lambdas/domain_gatherer/utils/: get_domains.py
lambdas/results_joiner/: handler.py  requirements.txt
lambdas/results_joiner/utils/: s3_utils.py
lambdas/site_mapper/: handler.py  send_message.py  spider.py
tests/: conftest.py  fixtures.py  test_current_domain_gatherer.py  test_domain_gatherer.py  test_site_mapper.py
tests/assets/: a11yMessage.json  sqsMessage.json
