[metadata]
name = fed-a11y-scan
author = Scott McAllister
version = 1.0.0
url = https://www.feda11y.com
license = GNU-GENERAL-PUBLIC-LICENSE
maintainer = csmcallister
maintainer_email = mcallistercs@gmail.com
description = Automated accessibility testing of U.S. Federal Government websites using a serverless infrastructure.
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
source =
    ./
omit =
    */static/*
    */templates/*
    */cli.py
    tests/*
    domains/*
    */__init__.py
    app.py
    lambdas/site_mapper/*
    env/*


[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    if __name__ == .__main__.:
    def log_helper

ignore_errors = True

[flake8]
ignore = D203, W293, W291, E116, W292, E303, F405, F403
exclude =
    # No need to traverse these directories
    .git, .github, .circleci, __pycache__, env, cdk.out, lambdas/a11y_scan, domains, assets, lambda-releases, venv
max-complexity = 10